# serde-ubj

./: Cargo.toml  README.md  build.sh  setup.sh
src/: err.rs  lib.rs  markers.rs  prelude.rs  ser.rs
src/prelude/: io.rs
tests/: err.rs  ser.rs
